--- a/CapstoneApiGateway/EnrollmentsService/appsettings.Development.json
+++ b/CapstoneApiGateway/EnrollmentsService/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DEL1-LHP-N72932;Initial Catalog=EnrollmentsDb;Integrated Security=true"
   }
 }
